# full-stack-fastapi-svelte-mysql

./: LICENSE  README.md
{{cookiecutter.project_slug}}/backend/: README.md  pyproject.toml
{{cookiecutter.project_slug}}/backend/app/: main.py
{{cookiecutter.project_slug}}/backend/app/core/: config.py
{{cookiecutter.project_slug}}/backend/config/: config.yaml
{{cookiecutter.project_slug}}/frontend/: README.md
