[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["InSeong.Lee <randy80@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.104.0"
uvicorn = "^0.23.2"
pytest = "^7.4.2"
pydantic-settings = "^2.0.3"
pydantic-settings-yaml = "^0.2.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
